Vimeo Project 3 commit